--- a/frontend/src/styles/overrides.css
+++ b/frontend/src/styles/overrides.css
@@ -22,6 +22,13 @@
 .text-dusky-blue {color: #26538D;}
 .border-dusky-blue {border-color: #26538D;}
 .outline-dusky-blue {outline-color: #26538D;}
+.hover\:bg-dusky-blue {
+    &:hover {
+        @media (hover: hover) {
+            background-color: #26538D;
+        }
+    }
+}
 
 .bg-pearl-river {background-color: #D9DDDC;}
 .fill-pearl-river {fill: #D9DDDC;}
